# TestSOFile

t1/: CMakeCache.txt  Makefile  cmake_install.cmake  hello  main.c
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt
t4/: CMakeLists.txt  test.cc
